# mslx-plugin-rustbridge

./: .gitignore  LICENSE  README.md  build.bat  build.sh  mslx-plugin-rustbridge.sln
.github/: build.yml
.github/workflows/: build.yml
csharp/: MSLX.Plugin.RustBridge.csproj  RustBridgeController.cs  RustBridgeControllerBase.cs  RustInterop.cs  RustNativeLoader.cs  RustPluginBase.cs  RustPluginEntry.cs
csharp/buildTransitive/: MSLX.Plugin.RustBridge.targets
docs/: architecture.md  csharp-api.md  getting-started.md  rust-plugin-api.md  sample.md  troubleshooting.md
rust/: Cargo.toml
rust/src/: lib.rs  router.rs  sdk.rs
samples/RustBridgeDemo/: MSLX.Plugin.RustBridge.Demo.csproj  RustBridgeController.cs  RustPluginEntry.cs
samples/RustBridgeDemo/rust/: Cargo.toml
samples/RustBridgeDemo/rust/src/: bridge.rs  lib.rs  router.rs  sdk.rs
