[package]
name    = "mslx-plugin-rustbridge-demo"
version = "1.1.1"
edition = "2024"

[lib]
name       = "mslx_plugin_rustbridge"
crate-type = ["cdylib"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = "symbols"
